# Fiverr-Project

./: CMakeLists.txt  Card.cpp  Card.h  CardHand.cpp  CardHand.h  CardHandScorer.cpp  CardHandScorer.h  Deck.cpp  Deck.h  PokerCombo.cpp  PokerCombo.h  PokerGame.cpp  PokerGame.h  PokerScore.cpp  PokerScore.h  README.md  main.cpp  sfml.cpp  sfml.h  suits_ranks.h
